--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tour Guide</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Centralized CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -56,11 +57,13 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 Tour Guide. All Rights Reserved.</p>
+    <footer>
+        <p class="text-center">&copy; 2024 Tour Guide. All Rights Reserved.</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Centralized JS -->
+    <script src="js/script.js"></script>
 </body>
 </html>
