--- a/pages/admin_home.html
+++ b/pages/admin_home.html
@@ -7,45 +7,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .navbar {
-            background-color: #f4f4f4;
-            border-bottom: 1px solid #ddd;
-        }
-        .navbar-brand {
-            font-weight: bold;
-        }
-        .content {
-            margin-top: 70px;
-            padding: 20px;
-        }
-        .card {
-            height: 120px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            font-size: 1.1em;
-            font-weight: bold;
-            color: white;
-        }
-        .card i {
-            display: block;
-            font-size: 2em;
-            margin-bottom: 5px;
-        }
-        .blue { background-color: #2196f3; }
-        .green { background-color: #4caf50; }
-        .red { background-color: #f44336; }
-        .purple { background-color: #9c27b0; }
-        .teal { background-color: #009688; }
-        .orange { background-color: #ff9800; }
-        .pink { background-color: #e91e63; }
-        .brown { background-color: #795548; }
-    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -159,7 +120,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="../js/script.js"></script>
 </body>
 </html>
