--- a/pages/login.html
+++ b/pages/login.html
@@ -6,24 +6,11 @@
     <title>Login - User Login</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f7f6;
-        }
-        .container {
-            max-width: 600px;
-            margin-top: 100px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container login-container">
         <h1>Login</h1>
         <form id="loginForm">
             <div class="form-group">
@@ -39,25 +26,8 @@
         <p class="mt-3 text-center">Don't have an account? <a href="register.html">Sign up here</a></p>
     </div>
 
-    <script>
-        // Login Form Submission
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const username = document.getElementById('loginUsername').value;
-            const password = document.getElementById('loginPassword').value;
-
-            let users = JSON.parse(localStorage.getItem('users')) || [];
-
-            const user = users.find(u => u.username === username && u.password === password);
-
-            if (user) {
-                Swal.fire('Success', 'Login successful!', 'success');
-                window.location.href = 'user_home.html'; // Redirect to user home page
-            } else {
-                Swal.fire('Error', 'Invalid credentials. Please try again or register.', 'error');
-            }
-        });
-    </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
