--- a/pages/register.html
+++ b/pages/register.html
@@ -6,27 +6,11 @@
     <title>Register - Create an Account</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f7f6;
-        }
-        .container {
-            max-width: 600px;
-            margin-top: 50px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container register-container">
         <h1>Register</h1>
         <form id="registerForm">
             <div class="form-group">
@@ -54,53 +38,8 @@
         <p class="mt-3 text-center">Already have an account? <a href="login.html">Login here</a></p>
     </div>
 
-    <script>
-        // Registration Form Submission
-        document.getElementById('registerForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const username = document.getElementById('username').value;
-            const email = document.getElementById('email').value;
-            const contactNo = document.getElementById('contactNo').value;
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirmPassword').value;
-
-            // Validate email (only Gmail allowed)
-            const emailPattern = /^[a-zA-Z0-9._-]+@gmail\.com$/;
-            if (!emailPattern.test(email)) {
-                Swal.fire('Error', 'Please enter a valid Gmail address!', 'error');
-                return;
-            }
-
-            // Validate password length
-            if (password.length < 8) {
-                Swal.fire('Error', 'Password must be at least 8 characters long!', 'error');
-                return;
-            }
-
-            // Validate if password and confirm password match
-            if (password !== confirmPassword) {
-                Swal.fire('Error', 'Passwords do not match!', 'error');
-                return;
-            }
-
-            // Save user data in localStorage (for demo purposes)
-            const userData = {
-                username,
-                email,
-                contactNo,
-                password
-            };
-
-            let users = JSON.parse(localStorage.getItem('users')) || [];
-            users.push(userData);
-            localStorage.setItem('users', JSON.stringify(users));
-
-            Swal.fire('Success', 'Registration successful! You can now login.', 'success');
-
-            // Redirect to login page after successful registration
-            window.location.href = 'login.html';
-        });
-    </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
