--- a/pages/user_home.html
+++ b/pages/user_home.html
@@ -7,45 +7,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .navbar {
-            background-color: #f4f4f4;
-            border-bottom: 1px solid #ddd;
-        }
-        .navbar-brand {
-            font-weight: bold;
-        }
-        .content {
-            margin-top: 70px;
-            padding: 20px;
-        }
-        .card {
-            height: 120px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            font-size: 1.1em;
-            font-weight: bold;
-            color: white;
-        }
-        .card i {
-            display: block;
-            font-size: 2em;
-            margin-bottom: 5px;
-        }
-        .blue { background-color: #2196f3; }
-        .green { background-color: #4caf50; }
-        .red { background-color: #f44336; }
-        .purple { background-color: #9c27b0; }
-        .teal { background-color: #009688; }
-        .orange { background-color: #ff9800; }
-        .pink { background-color: #e91e63; }
-        .brown { background-color: #795548; }
-    </style>
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -75,7 +38,7 @@
             <div class="row g-3">
                 <!-- View Travel -->
                 <div class="col-md-3">
-                    <a href="/pages/view_travel.html">
+                    <a href="/pages/admin_function/view_travel.html">
                         <div class="card blue">
                             <i class="bi bi-globe"></i>
                             View Travel
@@ -84,7 +47,7 @@
                 </div>
                 <!-- View Route -->
                 <div class="col-md-3">
-                    <a href="/pages/view_route.html">
+                    <a href="/pages/admin_function/view_route.html">
                         <div class="card green">
                             <i class="bi bi-signpost"></i>
                             View Route
@@ -93,7 +56,7 @@
                 </div>
                 <!-- View Hotel -->
                 <div class="col-md-3">
-                    <a href="/pages/view_hotel.html">
+                    <a href="/pages/admin_function/view_hotel.html">
                         <div class="card red">
                             <i class="bi bi-house-door"></i>
                             View Hotel
@@ -102,7 +65,7 @@
                 </div>
                 <!-- View Food -->
                 <div class="col-md-3">
-                    <a href="/pages/view_food.html">
+                    <a href="/pages/admin_function/view_food.html">
                         <div class="card purple">
                             <i class="bi bi-cup-straw"></i>
                             View Food
@@ -111,7 +74,7 @@
                 </div>
                 <!-- My Booking -->
                 <div class="col-md-3">
-                    <a href="/pages/my_booking.html">
+                    <a href="/pages/admin_function/my_booking.html">
                         <div class="card teal">
                             <i class="bi bi-journal"></i>
                             My Booking
@@ -133,7 +96,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="../js/script.js"></script>
 </body>
 </html>
