--- a/index.html
+++ b/index.html
@@ -6,8 +6,128 @@
     <title>Tour Guide</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Centralized CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        /* General Body Style */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f7fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Navigation Bar Style */
+        nav {
+            background-color: #343a40;
+        }
+
+        .navbar-brand {
+            color: #fff !important;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .navbar-brand:hover {
+            color: #ffd700 !important;
+        }
+
+        /* Carousel Section */
+        .carousel {
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .carousel-inner img {
+            border-radius: 8px;
+            height: 450px;
+            object-fit: cover;
+        }
+
+        /* Welcome Section */
+        .container {
+            margin-top: 30px;
+            margin-bottom: 50px;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            color: #555;
+            margin-bottom: 30px;
+        }
+
+        .d-flex a {
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 500;
+            padding: 12px 30px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        /* Buttons */
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5a6268;
+            border-color: #4e555b;
+        }
+
+        .btn-success {
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        .btn-success:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #343a40;
+            padding: 15px 0;
+            color: #fff;
+            margin-top: 50px;
+            text-align: center;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .carousel-inner img {
+                height: 300px;
+            }
+
+            .container {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+
+            .d-flex a {
+                font-size: 16px;
+                padding: 10px 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -29,10 +149,10 @@
                 <img src="img/taj-mahal.jpg" class="d-block w-100" alt="Taj Mahal">
             </div>
             <div class="carousel-item">
-                <img src="img/great-wall.jpg" class="d-block w-100" alt="Great Wall of China">
+                <img src="img/kerala.jpg" class="d-block w-100" alt="Great Wall of China">
             </div>
             <div class="carousel-item">
-                <img src="img/kerala.jpg" class="d-block w-100" alt="Kerala">
+                <img src="img/great-wall.jpg" class="d-block w-100" alt="Kerala">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -45,7 +165,7 @@
         </button>
     </div>
 
-    <!-- Login/Register Section -->
+    <!-- Welcome Section -->
     <div class="container text-center my-5">
         <h1>Welcome to Tour Guide</h1>
         <p>Your gateway to exploring the world!</p>
@@ -58,12 +178,10 @@
 
     <!-- Footer -->
     <footer>
-        <p class="text-center">&copy; 2024 Tour Guide. All Rights Reserved.</p>
+        <p class="text-center">&copy; 2024 Tour Guide. All Rights Reserved. Developed by Chetan Chobitkar & Shashank Bagale</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Centralized JS -->
-    <script src="js/script.js"></script>
 </body>
 </html>
