--- a/pages/admin_login.html
+++ b/pages/admin_login.html
@@ -5,10 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Body Style */
+        body {
+            background-color: #f4f7fa;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Container Style */
+        .container {
+            max-width: 600px;
+            margin-top: 100px;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Form Style */
+        .form-label {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        .form-control {
+            border-radius: 5px;
+            padding: 12px;
+            font-size: 1rem;
+        }
+
+        /* Button Style */
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            padding: 12px 0;
+            font-size: 1.1rem;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
+        }
+
+        /* Heading Style */
+        h1 {
+            font-size: 2rem;
+            font-weight: 700;
+            color: #333;
+            text-align: center;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+                margin-top: 50px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container py-5">
-        <h1 class="text-center">Admin Login</h1>
+        <h1>Admin Login</h1>
         <form class="w-50 mx-auto mt-5" onsubmit="return adminLogin(event)">
             <div class="mb-3">
                 <label for="username" class="form-label">Email</label>
