--- a/pages/register.html
+++ b/pages/register.html
@@ -6,40 +6,61 @@
     <title>Register - Create an Account</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <div class="container register-container">
-        <h1>Register</h1>
+    <div class="container mt-5">
+        <h1 class="text-center">Register</h1>
         <form id="registerForm">
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Enter Username" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="email">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter Email" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="contactNo">Contact Number</label>
                 <input type="text" class="form-control" id="contactNo" placeholder="Enter Contact Number" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Enter Password (8+ characters)" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Register</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
         <p class="mt-3 text-center">Already have an account? <a href="login.html">Login here</a></p>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script>
+        document.getElementById("registerForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            const username = document.getElementById("username").value;
+            const email = document.getElementById("email").value;
+            const contactNo = document.getElementById("contactNo").value;
+            const password = document.getElementById("password").value;
+            const confirmPassword = document.getElementById("confirmPassword").value;
+
+            if (password !== confirmPassword) {
+                Swal.fire("Error", "Passwords do not match!", "error");
+                return;
+            }
+
+            const user = { username, email, contactNo, password };
+            localStorage.setItem(username, JSON.stringify(user));
+
+            Swal.fire("Success", "Registration complete! Please log in.", "success").then(() => {
+                window.location.href = "login.html";
+            });
+        });
+    </script>
 </body>
 </html>
