--- a/pages/user_function/my_booking.html
+++ b/pages/user_function/my_booking.html
@@ -105,11 +105,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>User Booking Details</h1>
+        <h1>Your Booking Details</h1>
         <div id="bookingDetails" class="mt-4">
             <!-- Booking details will be populated here -->
         </div>
-        <a href="/pages/admin_home.html" class="btn-back">Back to Home</a>
+        <a href="/pages/user_home.html" class="btn-back">Back to Home</a>
     </div>
 
     <script>
