4th update to this web

--- a/pages/admin_function/admin_update_info.html
+++ b/pages/admin_function/admin_update_info.html
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="card-body">
                 <p><strong>Email:</strong> admin@gmail.com</p>
-                <p><strong>Password:</strong> test</p>
+                <p><strong>Password:</strong> **** </p>
                 <p><strong>Contact No:</strong> 09790675343</p>
                 <a href="admin_info_edit.html" class="btn btn-warning">Update</a>
             </div>
