--- a/index.html
+++ b/index.html
@@ -6,128 +6,8 @@
     <title>Tour Guide</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* General Body Style */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f7fa;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Navigation Bar Style */
-        nav {
-            background-color: #343a40;
-        }
-
-        .navbar-brand {
-            color: #fff !important;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .navbar-brand:hover {
-            color: #ffd700 !important;
-        }
-
-        /* Carousel Section */
-        .carousel {
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .carousel-inner img {
-            border-radius: 8px;
-            height: 450px;
-            object-fit: cover;
-        }
-
-        /* Welcome Section */
-        .container {
-            margin-top: 30px;
-            margin-bottom: 50px;
-        }
-
-        h1 {
-            font-size: 36px;
-            color: #333;
-            font-weight: 700;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 18px;
-            color: #555;
-            margin-bottom: 30px;
-        }
-
-        .d-flex a {
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: 500;
-            padding: 12px 30px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        /* Buttons */
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #004085;
-        }
-
-        .btn-secondary {
-            background-color: #6c757d;
-            border-color: #6c757d;
-        }
-
-        .btn-secondary:hover {
-            background-color: #5a6268;
-            border-color: #4e555b;
-        }
-
-        .btn-success {
-            background-color: #28a745;
-            border-color: #28a745;
-        }
-
-        .btn-success:hover {
-            background-color: #218838;
-            border-color: #1e7e34;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #343a40;
-            padding: 15px 0;
-            color: #fff;
-            margin-top: 50px;
-            text-align: center;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .carousel-inner img {
-                height: 300px;
-            }
-
-            .container {
-                padding-left: 10px;
-                padding-right: 10px;
-            }
-
-            .d-flex a {
-                font-size: 16px;
-                padding: 10px 20px;
-            }
-        }
-    </style>
+    <!-- Centralized CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -149,10 +29,10 @@
                 <img src="img/taj-mahal.jpg" class="d-block w-100" alt="Taj Mahal">
             </div>
             <div class="carousel-item">
-                <img src="img/kerala.jpg" class="d-block w-100" alt="Great Wall of China">
+                <img src="img/great-wall.jpg" class="d-block w-100" alt="Great Wall of China">
             </div>
             <div class="carousel-item">
-                <img src="img/great-wall.jpg" class="d-block w-100" alt="Kerala">
+                <img src="img/kerala.jpg" class="d-block w-100" alt="Kerala">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -165,23 +45,26 @@
         </button>
     </div>
 
-    <!-- Welcome Section -->
+    <!-- Login/Register Section -->
     <div class="container text-center my-5">
-        <h1>Welcome to Tour Guide</h1>
-        <p>Your gateway to exploring the world!</p>
+        <h1 class="mb-4">Welcome to Tour Guide</h1>
+        <p class="mb-4">Your gateway to exploring the world!</p>
         <div class="d-flex justify-content-center gap-3">
-            <a href="pages/admin_login.html" class="btn btn-primary">Admin Login</a>
-            <a href="pages/login.html" class="btn btn-secondary">User Login</a>
-            <a href="pages/register.html" class="btn btn-success">Register</a>
+            <a href="pages/admin_login.html" class="btn btn-primary px-4 py-2">Admin Login</a>
+            <a href="pages/login.html" class="btn btn-secondary px-4 py-2">User Login</a>
+            <a href="pages/register.html" class="btn btn-success px-4 py-2">Register</a>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer>
-        <p class="text-center">&copy; 2024 Tour Guide. All Rights Reserved. Developed by Chetan Chobitkar & Shashank Bagale</p>
+    <footer class="bg-dark text-white py-3">
+        <p class="text-center mb-0">&copy; 2024 Tour Guide. All Rights Reserved.</p>
+        <p class="text-center mb-0">Developed by Chetan Chobitkar and Shashank Bagale</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Centralized JS -->
+    <script src="js/script.js"></script>
 </body>
 </html>
