--- a/pages/admin_function/admin_info_edit.html
+++ b/pages/admin_function/admin_info_edit.html
@@ -1,31 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Admin Info</title>
+    <title>Update Admin Username</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Global Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: #343a40;
+        }
+
+        .navbar-brand {
+            color: #ffffff;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .navbar-nav .nav-link {
+            color: #ffffff;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #4CAF50;
+        }
+
+        .container {
+            max-width: 800px;
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+        }
+
+        .card {
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-body {
+            padding: 30px;
+            background-color: #ffffff;
+        }
+
+        .card-body p {
+            font-size: 1.2rem;
+            margin-bottom: 15px;
+        }
+
+        .card-body p strong {
+            color: #343a40;
+        }
+
+        .btn-warning {
+            background-color: #ff9800;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-warning:hover {
+            background-color: #e68900;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #343a40;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Online Portal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/admin_home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-        <h1 class="text-center mb-4">Update Admin Contact Details</h1>
+        <h1 class="text-center mb-4">Update Admin Username</h1>
         <div class="card">
             <div class="card-body">
                 <form id="updateAdminForm">
                     <div class="mb-3">
-                        <label for="adminName" class="form-label">Name</label>
-                        <input type="text" id="adminName" class="form-control" value="Panneer" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="adminUsername" class="form-label">Password</label>
+                        <label for="adminUsername" class="form-label">Username</label>
                         <input type="text" id="adminUsername" class="form-control" value="test" required>
                     </div>
-                    <div class="mb-3">
-                        <label for="adminContact" class="form-label">Contact No</label>
-                        <input type="text" id="adminContact" class="form-control" value="09790675343" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
+                    <button type="submit" class="btn btn-warning mt-3">Update Username</button>
                 </form>
             </div>
         </div>
@@ -37,16 +133,14 @@
             event.preventDefault();
 
             const updatedAdmin = {
-                name: document.getElementById('adminName').value,
-                username: document.getElementById('adminUsername').value,
-                contact: document.getElementById('adminContact').value
+                username: document.getElementById('adminUsername').value
             };
 
             // Simulate saving updated admin data (you can use localStorage or server-side logic)
             localStorage.setItem('adminInfo', JSON.stringify(updatedAdmin));
 
             // Show success message
-            alert('Admin info updated successfully!');
+            alert('Admin username updated successfully!');
 
             // Redirect back to the update admin page
             window.location.href = 'admin_update_info.html';
@@ -56,4 +150,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
