--- a/pages/admin_function/admin_update_info.html
+++ b/pages/admin_function/admin_update_info.html
@@ -1,26 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Admin Info</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Global Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: #343a40;
+        }
+
+        .navbar-brand {
+            color: #ffffff;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .navbar-nav .nav-link {
+            color: #ffffff;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #4CAF50;
+        }
+
+        .container {
+            max-width: 800px;
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+        }
+
+        .card {
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-body {
+            padding: 30px;
+            background-color: #ffffff;
+        }
+
+        .card-body p {
+            font-size: 1.2rem;
+            margin-bottom: 15px;
+        }
+
+        .card-body p strong {
+            color: #343a40;
+        }
+
+        .btn-warning {
+            background-color: #ff9800;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-warning:hover {
+            background-color: #e68900;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #343a40;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Online Portal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/admin_home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-        <h1 class="text-center mb-4">Update Admin Contact Details</h1>
+        <h1 class="text-center mb-4">Update Admin Info</h1>
         <div class="card">
             <div class="card-body">
-                <p><strong>Email:</strong> admin@gmail.com</p>
+                <p><strong>Admin Name:</strong> Chetan Chobitkar </p>
+                <p><strong>Email:</strong> admin@gmail.com </p>
+            
+                <p><strong>Username:</strong> <span id="usernameDisplay">tester</span></p>
                 <p><strong>Password:</strong> **** </p>
-                <p><strong>Contact No:</strong> 09790675343</p>
-                <a href="admin_info_edit.html" class="btn btn-warning">Update</a>
+                <p><strong>Contact No:</strong> 1234567890</p>
+                <!-- Link to redirect to update admin username -->
+                <a href="admin_info_edit.html" class="btn btn-warning">Update Username</a>
             </div>
         </div>
     </div>
 
+    <!-- Footer -->
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        // Check if there is any stored admin info in localStorage
+        window.addEventListener('load', function () {
+            const storedAdminInfo = JSON.parse(localStorage.getItem('adminInfo'));
+            if (storedAdminInfo && storedAdminInfo.username) {
+                // Update the displayed username with the stored one
+                document.getElementById('usernameDisplay').textContent = storedAdminInfo.username;
+            }
+        });
+    </script>
 </body>
+
 </html>
